--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
     </figure>
 
     <main>
-    <br>
-   
+        <br>
+        <br>
+
             <section id="OMS">
                 <p>
                     La Organización Mundial de Sanidad Animal establece que los animales se encuentran en un buen estado de bienestar cuando están sanos, cómodos, capaces de expresar su comportamiento normal y no sufren dolor, miedo o sufrimiento frente a cualquier situación (Manteca, Mainau, & Temple; 2019).
@@ -128,23 +129,32 @@
             </section>
 
             <section>
-                <h4>Mayor informacion</h4>
-                <iframe src="https://es.wikipedia.org/wiki/HTML" width="600px"></iframe>
+                <h4>Informacion adicional</h4>
+                <p>En los siguientes recursos se muestra informacion adicional</p>
+                <iframe src=http://cgservicios.df.gob.mx/prontuario/vigente/r490102.htm width="600px"></iframe>
             </section>
         
     </main>
   
     <footer>
+
+        <div class="contacto">
+            <a href="">Numero de contacto</a>
+            <br>
+            <a href="">correo electronico</a>
+            <br>
+            <a href="">pagina web</a>
+        </div>
+
         <div class="mapa-fmvz">
             <h5>Departamento de etologia FMVZ</h5>
             <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d1744.2648882605708!2d-99.17801359606538!3d19.32934356234122!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sdepartamento%20de%20etologia%20fmvz%20unam!5e0!3m2!1ses!2smx!4v1685460678792!5m2!1ses!2smx" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
 
-        <div class="contacto">
-
-        </div>
-        <p>&copy DHT 2023</p>
+        <p class="copy">&copy 2023 DHT</p>
+        
     </footer>
+
 </body>
 
 </html>
