--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <header><h1 >Bienestar Mental en Los Perros</h1></header>
+    <header><h1> Bienestar Mental en Los Perros </h1></header>
  
     <nav>
         <a href="#OMSA">OMSA</a>
@@ -53,7 +53,7 @@
             <section id="libertades" class="libertades">
 
                 <article class="libertad">
-                    <h4  class="titulo-lista"><dd>Estas libertades son:</dd></h4>
+                    <h4  class="titulo-lista"><dd>Estas 5 libertades son:</dd></h4>
                     <ol class="lista">
                         <li class="lista">Libertad de hambre y sed</li>
                         <li class="lista">Libertad de incomodidad</li>
@@ -165,9 +165,8 @@
 
                 </article>
 
-                <article class="pag-jueguetes">
-                    <!-- <iframe class="pagina-juguetes" src=https://www.handfie.com/juguetes-caseros-para-perros/01668/ width="600px"></iframe> -->
-                    <iframe class="pagina-jueguetes2" src=https://www.nonstopdogwear.com/es/repositorio/7-diy-dog-games/  width="450px" height="350px";></iframe>
+                <article class="pag-juguetes">
+                    <iframe class="pagina-jueguetes2" src=https://www.nonstopdogwear.com/es/repositorio/7-diy-dog-games/  width="400px" height="350px";></iframe>
                 </article>
                 
             </section>
