--- a/index.html
+++ b/index.html
@@ -125,21 +125,21 @@
                     </thead>
                     <tbody class="tabla-dia-perro">
                         <tr>
-                            <th>cachorro</th>
+                            <th>Cachorro</th>
                             <td>0-12 meses en promedio</td>
                             <td>4 a 6 horas al día</td>
                             <td>18 a 20 horas al día</td> 
                         </tr>
                         <tr>
-                            <th>adulto</th>
+                            <th>Adulto</th>
                             <td>1 a 8 años en promedio</td>
                             <td> 10 a 12 horas al día</td>
                             <td>12 a 14 horas al día</td> 
                         </tr>
                         <tr>
-                            <th>ansiano</th>
+                            <th>Geriatrico</th>
                             <td>+ de 8 años</td>
-                            <td> alrededor de 5-6 horas al día</td>
+                            <td>4 a 7 horas al día</td>
                             <td>+ de 15 horas al día</td> 
                         </tr>
                     </tbody>               
