--- a/index.html
+++ b/index.html
@@ -318,6 +318,13 @@
                      <input type="submit" class="boton-enviar" >
                 </form>
             </section>
+
+            <section class="link-segunda-pag">
+                <p>
+                    Si necesitas atención mas especializada da click aqui abajo.
+                </p>
+                <a class="link-pag" href="adicional.html">Información adicional</a>
+            </section>
     </main>
   
     <footer>
@@ -329,13 +336,9 @@
             <br>
             <a class="pie-pagina" href=""> Pagina Web </a> 
         </div>
-        <div class="mapa">
-            <h5 class="titulo-mapa"> Departamento de etologia FMVZ </h5>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d1744.2648882605708!2d-99.17801359606538!3d19.32934356234122!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sdepartamento%20de%20etologia%20fmvz%20unam!5e0!3m2!1ses!2smx!4v1685460678792!5m2!1ses!2smx" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
-        <br>
 
         <audio src="audio/AudioPerritos.mp3" controls autoplay></audio>
+
 
         <p class="copy">&copy 2023 DHT</p>
 
