Union de tablas

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
             <a class="pie-pagina" href=""> Pagina Web </a> 
         </div>
 
-        <audio src="audio/AudioPerritos.mp3" controls autoplay></audio>
+        <audio src="audio/AudioPerritos.mp3" controls none></audio>
 
 
         <p class="copy">&copy 2023 DHT</p>
