--- a/adicional.html
+++ b/adicional.html
@@ -26,6 +26,31 @@
             <h5 class="titulo-mapa"> Departamento de etologia FMVZ </h5>
             <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d1744.2648882605708!2d-99.17801359606538!3d19.32934356234122!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sdepartamento%20de%20etologia%20fmvz%20unam!5e0!3m2!1ses!2smx!4v1685460678792!5m2!1ses!2smx" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
+        
+        <section>
+            <table class="tabla-dos">
+                <tr class="dos">
+                  <th colspan="2" class="dos">Encabezado 1 y 2</th>
+                  <th class="dos">Encabezado 3</th>
+                </tr>
+                <tr>
+                  <td class="dos">Celda 1</td>
+                  <td class="dos">Celda 2</td>
+                  <td rowspan="2" class="dos">Celda 4 y 5</td>
+                </tr>
+                <tr>
+                  <td class="dos">Celda 6</td>
+                  <td class="dos">Celda 7</td>
+                </tr>
+                <tr class="dos">
+                  <td class="dos">Celda 8</td>
+                  <td class="dos">Celda 9</td>
+                  <td class="dos">Celda 10</td>
+                </tr>
+              </table>             
+        </section>
+
+        
     </main>
 </body>
 </html>
