Favoritos de la lista

--- a/adicional.html
+++ b/adicional.html
@@ -50,7 +50,21 @@
               </table>             
         </section>
 
-        
+        <section>
+            <h4  class="titulo-lista-mvz">
+                <dd>Lista de los doctores:</dd>
+            </h4>
+            <ol class="lista-dos">
+                <li class="lista-mvz-huella">MVZ. Moisés Heiblum Frid</li>
+                <li class="lista-mvz">MVZ. Alberto Tejeda Perea</li>
+                <li class="lista-mvz">MVZ. Sofía Rodríguez Viniegra</li>
+                <li class="lista-mvz">MVZ. Lucía Pérez Manrique</li>
+                <li class="lista-mvz">MVZ. Rodrigo Alonso Suárez Groult</li>
+            </ol>
+        </section>
+        <br>
+
+
     </main>
 </body>
 </html>
