--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <article class="libertad">
                     <h4  class="titulo-lista"><dd>Estas 5 libertades son:</dd></h4>
                     <ol class="lista">
-                        <li class="lista">Libertad de hambre y sed</li>
+                        <li class="lista-huella">Libertad de hambre y sed</li>
                         <li class="lista">Libertad de incomodidad</li>
                         <li class="lista">Libertda de dolor, lesión y enfermedad</li>
                         <li class="lista">Libertad de medio y angustia</li>
@@ -68,8 +68,6 @@
                 </aside>  
 
             </section>
-
-          
 
             <section id="bienestar" class="bienestar">
                 
