--- a/adicional.html
+++ b/adicional.html
@@ -8,12 +8,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
     <h1 class="titulo-mayor-info">Mayor información</h1>
     <main>
         <p> 
             Si requieres ayuda de un especialista puedes acudir al HOSPITAL VETERINARIO DE ESPECIALIDADES EN FAUNA SILVESTRE Y ETOLOGÍA CLÍNICA ubicado en la Facultad de Medicina Veterininaria y Zootecnia, UNAM.
         </p>
+
         <h3 class="horario-info">Horario de Atención</h3>
+
         <p>
             Lunes a Viernes de 10 a 17 hrs
             <br>
@@ -21,6 +24,8 @@
             <br>
             Correo: etologiaclinicafmvzunam@hotmail.com 
         </p>
+
+        <video src="video/video.mp4#t=20,25" controls></video>
 
         <section class="mapa">
             <h5 class="titulo-mapa"> Departamento de etologia FMVZ </h5>
@@ -66,5 +71,6 @@
 
 
     </main>
+
 </body>
 </html>
