Ajuste de encabezados

--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
             <a class="pie-pagina" href=""> Pagina Web </a> 
         </div>
 
-        <audio src="audio/AudioPerritos.mp3" controls none></audio>
+        <audio src="audio/AudioPerritos.mp3" controls muted></audio>
 
 
         <p class="copy">&copy 2023 DHT</p>
