--- a/adicional.html
+++ b/adicional.html
@@ -13,28 +13,44 @@
 
     <h1 class="titulo-mayor-info">Mayor información</h1>
     <main>
-        <p> 
+        <p class="p-adicional"> 
             Si requieres ayuda de un especialista puedes acudir al HOSPITAL VETERINARIO DE ESPECIALIDADES EN FAUNA SILVESTRE Y ETOLOGÍA CLÍNICA ubicado en la Facultad de Medicina Veterininaria y Zootecnia, UNAM.
         </p>
 
-        <h3 class="horario-info">Horario de Atención</h3>
+        <section class="seccion-info">
+            <h3 class="horario-info">Horario de Atención</h3>
+            <p class="p-adicional">
+                Lunes a Viernes de 10 a 17 hrs
+                <br>
+                Citas al telefono:
+                <a href="tel:+5556225942">
+                    55 56 22 59 42 </a> 
+                <br>
+                Correo: 
+                <a href="etologiaclinicafmvzunam@hotmail.com">
+                    etologiaclinicafmvzunam@hotmail.com</a> 
+                <br>
+                <a href="https://fmvz.unam.mx/fmvz/servicios/s_etologia_off.html" target="_blank">https://fmvz.unam.mx/fmvz/servicios/s_etologia_off.html</a>
 
-        <p>
-            Lunes a Viernes de 10 a 17 hrs
-            <br>
-            Citas al telefono : 56 22 59 42
-            <br>
-            Correo: etologiaclinicafmvzunam@hotmail.com 
-        </p>
+            </p>
+        </section>
 
+        <section class="seccion-lista">
+                <h4  class="titulo-lista-mvz">
+                    <dd>Lista de los doctores:</dd>
+                </h4>
+                <ol class="lista-dos">
+                    <li class="lista-mvz-huella">MVZ. Moisés Heiblum Frid</li>
+                    <li class="lista-mvz">MVZ. Alberto Tejeda Perea</li>
+                    <li class="lista-mvz">MVZ. Sofía Rodríguez Viniegra</li>
+                    <li class="lista-mvz">MVZ. Lucía Pérez Manrique</li>
+                    <li class="lista-mvz">MVZ. Rodrigo Alonso Suárez Groult</li>
+                </ol>
+       </section>
+      
         <video src="video/video.mp4#t=20,25" controls></video>
 
-        <section class="mapa">
-            <h5 class="titulo-mapa"> Departamento de etologia FMVZ </h5>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d1744.2648882605708!2d-99.17801359606538!3d19.32934356234122!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sdepartamento%20de%20etologia%20fmvz%20unam!5e0!3m2!1ses!2smx!4v1685460678792!5m2!1ses!2smx" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </section>
-        
-        <section>
+        <section class="tabla">
             <table class="tabla-dos">
                 <tr class="dos">
                   <th colspan="2" class="dos">Encabezado 1 y 2</th>
@@ -56,20 +72,6 @@
                 </tr>
               </table>             
         </section>
-
-        <section>
-            <h4  class="titulo-lista-mvz">
-                <dd>Lista de los doctores:</dd>
-            </h4>
-            <ol class="lista-dos">
-                <li class="lista-mvz-huella">MVZ. Moisés Heiblum Frid</li>
-                <li class="lista-mvz">MVZ. Alberto Tejeda Perea</li>
-                <li class="lista-mvz">MVZ. Sofía Rodríguez Viniegra</li>
-                <li class="lista-mvz">MVZ. Lucía Pérez Manrique</li>
-                <li class="lista-mvz">MVZ. Rodrigo Alonso Suárez Groult</li>
-            </ol>
-        </section>
-        <br>
 
 
     </main>
