--- a/HTML/adicional.html
+++ b/HTML/adicional.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Información adicional</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../CSS/style.css">
 </head>
 
 <body>
-
+<!-- Añadir boton que redireccione a pagina principal -->
     <h1 class="titulo-mayor-info">Mayor información</h1>
     <main>
         <p class="p-adicional"> 
@@ -48,7 +48,7 @@
                 </ol>
        </section>
       
-        <video src="video/video.mp4#t=20,25" controls></video>
+        <video src="../video/video.mp4" controls></video>
 
         <section class="tabla">
             <table class="tabla-dos">
@@ -75,6 +75,9 @@
 
 
     </main>
+    <footer>
+
+    </footer>
 
 </body>
 </html>
