--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bienestar en los perros</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/CSS/style.css">
+    <!-- font family -->
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -263,7 +267,7 @@
                         </label>
                         
                         <br><br>
-
+                        <!-- Cambiar los inout y añadir lable para el radio -->
                         <label for="tamaño-perro" class="texto">
                              Tamaño :  
                             <input id= "tamaño-perro" type="radio"  name="respuesta" value="1"> chico
@@ -321,7 +325,7 @@
                 <p>
                     Si necesitas atención mas especializada da click aqui abajo.
                 </p>
-                <a class="link-pag" href="adicional.html">Información adicional</a>
+                <a class="link-pag" href="/HTML/adicional.html">Información adicional</a>
             </section>
     </main>
   
