Prueba de vinculos

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 
-    <header><h1> Bienestar Mental en Los Perros </h1></header>
+    <header><h1> Bienestar Mental en Los Perros Felices</h1></header>
  
     <nav>
         <a href="#OMSA">OMSA</a>
@@ -325,13 +325,13 @@
                 <p>
                     Si necesitas atención mas especializada da click aqui abajo.
                 </p>
-                <a class="link-pag" href="/HTML/adicional.html">Información adicional</a>
+                <a class="link-pag" href="./HTML/adicional.html">Información adicional</a>
             </section>
     </main>
   
     <footer>
 
-        <audio src="audio/AudioPerritos.mp3" controls muted></audio>
+        <audio src="./audio/AudioPerritos.mp3" controls muted></audio>
         <p class="copy">&copy 2023 DHT</p>
 
     </footer>
